--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
           <span class="heading-primary__sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn-animated btn--white">discover out tours</a>
+        <a href="#section-tours" class="btn btn-animated btn--white"
+          >discover out tours</a
+        >
       </div>
     </header>
 
