--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
-                src="img/nat-1-large.jpg"
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
                 alt=""
                 class="composition__photo composition__photo-1"
               />
@@ -276,7 +276,7 @@
 
         <div class="u-center u-margin-bottom-huge">
           <h2 class="heading-secondary u-background-green">
-            Exciting tours for adventurous people
+            we make people genuinely happy
           </h2>
         </div>
 
@@ -296,7 +296,6 @@
                 necessitatibus consequatur cupiditate quasi corrupti odio
                 delectus quas, sapiente, ipsum accusantium aliquid, dolorem
                 laudantium qui fugit! Lorem ipsum dolor sit amet consectetur
-                adipisicing elit.
               </p>
             </div>
           </div>
@@ -318,7 +317,6 @@
                 necessitatibus consequatur cupiditate quasi corrupti odio
                 delectus quas, sapiente, ipsum accusantium aliquid, dolorem
                 laudantium qui fugit! Lorem ipsum dolor sit amet consectetur
-                adipisicing elit.
               </p>
             </div>
           </div>
@@ -400,13 +398,15 @@
 
         <div class="row">
           <div class="col-1-of-2">
-            <ul class="footer__list">
-              <li><a class="footer__link" href="#">company</a></li>
-              <li><a class="footer__link" href="#">contact us</a></li>
-              <li><a class="footer__link" href="#">careers</a></li>
-              <li><a class="footer__link" href="#">privacy policy</a></li>
-              <li><a class="footer__link" href="#">terms</a></li>
-            </ul>
+            <div class="footer__navigation">
+              <ul class="footer__list">
+                <li><a class="footer__link" href="#">company</a></li>
+                <li><a class="footer__link" href="#">contact us</a></li>
+                <li><a class="footer__link" href="#">careers</a></li>
+                <li><a class="footer__link" href="#">privacy policy</a></li>
+                <li><a class="footer__link" href="#">terms</a></li>
+              </ul>
+            </div>
           </div>
           <div class="col-1-of-2">
             <p class="footer__copyright">
