--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <script defer src="js/controller.js" type="module"></script>
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
 
-    <title>Document</title>
+    <title>Natours</title>
   </head>
   <body>
     <div class="navigation">
